# omar-online-manga-reader

./: .gitignore  Cargo.toml  LICENSE.md  bonnie.toml  build.rs  index.html  package.json  pnpm-lock.yaml  readme.md  tailwind.config.js  tailwind.css
.github/workflows/: deploy.yml
counter/: Cargo.toml
counter/src/: main.rs
src/: info.rs  main.rs  manga.rs  navbar.rs  state.rs
src/components/atoms/: container.rs  icon.rs  image_intersection.rs  mod.rs
src/components/atoms/buttons/: button.rs
src/components/molecules/: icon_text_block.rs  mod.rs
src/components/molecules/dropdowns/: dropdown.rs  manga_dropdown.rs  mod.rs  settings_dropdown.rs
src/components/molecules/icon_button/: icon_button.rs  mod.rs
src/manga/: book.rs  grid_preview.rs  manga.rs  mod.rs  scroller.rs  single.rs
src/states/: mod.rs  options.rs  state.rs
src/utils/: utils.rs
