[package]
name = "rust-manga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
log = "0.4.17"
yew-agent = "0.2.0"
serde = { version = "1.0.151", features = ["derive"] }
web-sys = { version = "0.3.60", features = ['console'] }
wasm-bindgen = { version = "0.2.83" }
